# mandle_brot_c

./: .gitignore  CMakeLists.txt  READ.md  graphics.c  graphics.h  main.c  makefile  mandelbrot  mandelbrot.c  mandelbrot.h  mandelbrot_four_split.c  mandelbrot_four_split.h  mandelbrot_iteration.c  mandelbrot_iteration.h  mandelbrot_standard.c  mandelbrot_standard.h  mandelbrot_types.h  queue.c  queue.h
mandelbrot.dSYM/Contents/Resources/DWARF/: mandelbrot
mandelbrot.dSYM/Contents/Resources/Relocations/aarch64/: mandelbrot.yml
